--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+#root {
+  position: relative;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
