--- a/src/components/HomePage/Connector/Connector.module.scss
+++ b/src/components/HomePage/Connector/Connector.module.scss
@@ -1,3 +1,9 @@
 .container {
     width: 100%;
+
+    .group_btn {
+        display: flex;
+        gap: 16px;
+        justify-content: center;
+    }
 }
